--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,91 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+* {
+    box-sizing: border-box;
+}
+
+@view-transition {
+    navigation: auto;
+}
+
+@keyframes transitionIn{
+    from {
+        filter: blur(50px);
+        opacity: 0;
+    }
+    to {
+        filter: blur(0);
+        opacity: 1;
+    }
+}
+
+@keyframes transitionOut{
+    from {
+        filter: blur(0);
+        opacity: 1;
+    }
+    to {
+        filter: blur(50px);
+        opacity: 0;
+    }
+}
+  
+  
+/*
+  default blend mode is multiple. Set to normal to avoid effects we don't want.
+*/
+::view-transition-old(root),
+::view-transition-new(root) {
+  /* mix-blend-mode: normal; */
+  animation-fill-mode: both;
+}
+
+/*
+  We don't want the outgoing screen to do anything, just get covered by next page.
+*/
+::view-transition-old(root) {
+  animation: transitionOut 0.5s;
+  animation-fill-mode: both;
+}
+
+::view-transition-new(root) {
+  animation: transitionIn 1s ;
+}
+
+
+body {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    background-color: #292929;
+}
+
+#particles-js {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+}
+
+.container {
+    text-align: center;
+}
+
+/* Add styles for your logo/graphic if needed */
+.logo {
+    max-width: 100%; /* Adjust as needed */
+    height: auto;
+    padding: 15px;
+    view-transition-name: 'logo';
+}
+.logo.test {
+    width: 800px;
+}
+
+.link {
+    display: block;
+    position: relative;
+    z-index: 10;
+}
