--- a/resources/css/shared.css
+++ b/resources/css/shared.css
@@ -1,8 +1,31 @@
 @import 'shared/wrapper.css';
 @import 'shared/reset.css';
+@import 'shared/utilities/visibility.css';
 
 @view-transition {
   navigation: auto;
+}
+
+@keyframes transitionIn{
+  from {
+      filter: blur(50px);
+      opacity: 0;
+  }
+  to {
+      filter: blur(0);
+      opacity: 1;
+  }
+}
+
+@keyframes transitionOut{
+  from {
+      filter: blur(0);
+      opacity: 1;
+  }
+  to {
+      filter: blur(50px);
+      opacity: 0;
+  }
 }
 
 /*
@@ -18,12 +41,14 @@
   We don't want the outgoing screen to do anything, just get covered by next page.
 */
 ::view-transition-old(root) {
-  animation: transitionOut 0.5s;
+  animation: transitionOut 0.25s;
   animation-fill-mode: both;
 }
 
 ::view-transition-new(root) {
-  animation: transitionIn 1s ;
+  animation: transitionIn 0.5s ;
 }
 
-
+body{
+  background-color: #333;
+}
