--- a/resources/css/shared/reset.css
+++ b/resources/css/shared/reset.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    border: 0;
+    font-size: 100%;
+    line-height: var(--line-height-content);
+    vertical-align: baseline;
 }
 
 ul {
