--- a/resources/css/news/components/header.css
+++ b/resources/css/news/components/header.css
@@ -65,7 +65,7 @@
 
 .HeaderControls {
     display: flex;
-    gap: 0.25em;
+    gap: 0.5em;
     &_button {
         /* width: 2em; */
         background: none;
@@ -81,7 +81,7 @@
             linear-gradient(0deg, var(--color-active) 50%, transparent 0) repeat-y;
         background-size: 8px 2px, 8px 2px, 2px 8px, 2px 8px;
         background-position: 0 0, 0 100%, 0 0, 100% 0;
-        animation: linearGradientMove .3s infinite linear;
+        animation: linearGradientMove 0.5s infinite linear;
 
         &:hover {
             cursor: pointer;
@@ -117,7 +117,7 @@
         padding-left: 100%;
         box-sizing: content-box;
         display: inline-flex;
-        animation: ticker 20s linear infinite;
+        animation: ticker 30s linear infinite;
         will-change: translate3d;
     }
     &_list {
