--- a/resources/css/news/foundation.css
+++ b/resources/css/news/foundation.css
@@ -10,6 +10,7 @@ html {
 body {
     font-size: var(--font-size-base);
     background: var(--color-bg);
+    color: var(--color-body);
     font-family: var(--font-body);
     font-weight: 400;
     font-style: normal;
