--- a/resources/css/news/components/clock.css
+++ b/resources/css/news/components/clock.css
@@ -17,22 +17,31 @@
         background-size: contain;
         text-align: center;
         &_time {
-            font-size: clamp(2em, 2.5vw, 3em);
-            width: 6ch;
-            letter-spacing: -.1em;
+            display: flex;
+            font-family: var(--font-heading);
+            font-size: 2.5em;
+            /* letter-spacing: -.1em; */
+        }
+        &_unit {
+            display: inline-block;
+            width: 2ch;
         }
         &_zone {
+            font-size: 1.5em;
             font-family: var(--font-heading);
         }
     }
     &_stars {
         grid-area: stars;
+        color: var(--color-secondary);
     }
     &_moons {
         grid-area: moons;
+        color: var(--color-secondary);
     }
     &_date {
         grid-area: date;
         font-size:1.4em;
+        color: var(--color-secondary);
     }
 }
