--- a/resources/css/news/layouts/default.css
+++ b/resources/css/news/layouts/default.css
@@ -1,1 +1,46 @@
-/* dadassd */
+.Layout {
+    display: flex;
+    &_sidebar {
+        flex: 0 0 300px;
+    }
+    &_center {
+        --cut: 3rem;
+        flex: 1 1 50%;
+        /* border: 1px solid var(--color-line); */
+        min-height: var(--cut);
+        position: relative;
+        border-right: 1px solid var(--color-line);
+        overflow: hidden;
+        padding: 2rem;
+        &:after,
+        &:before {
+            position: absolute;
+            content: '';
+            width: 100%;
+            left: 0px;
+            z-index: -1;
+        }
+        &:before {
+            height: var(--cut);
+            top: 0;
+            border: 1px solid var(--color-line);
+            border-width: 1px 1px 0px 2px;
+            transform: skew(-45deg);
+            transform-origin: right bottom;
+        }
+        &:after {
+            height: calc(100% - var(--cut) - 2px);
+            bottom: 0px;
+            border: 1px solid var(--color-line);
+            border-width: 0px 0px 1px 1px;
+        }
+        /* // TEST */
+        img {
+            clip-path: polygon(0 calc(var(--cut) / 3 * 2), 0 100%, 100% 100%, 100% 0%, calc(var(--cut) / 3 * 2) 0);
+            max-width: 300px;
+        }
+    }
+    &_aside {
+        flex: 0 0 300px;
+    }
+}
