--- a/resources/css/news/components/stats.css
+++ b/resources/css/news/components/stats.css
@@ -1,5 +1,6 @@
 .Stats {
     color: var(--color-secondary);
+    padding: var(--box-padding);
     &_list {
         display: flex;
         flex-wrap: wrap;
