--- a/resources/css/news/components/ticker.css
+++ b/resources/css/news/components/ticker.css
@@ -38,13 +38,13 @@
         &::after {
             content: ' ▽';
             color: var(--color-heading);
-            font-size: 1.6rem;
+            font-size: 1.6em;
         }
     }
     &_link {
         font-family: var(--font-heading);
         color: var(--color-heading);
-        font-size: 1.6rem;
+        font-size: 1.6em;
         text-decoration: none;
         text-transform: uppercase;
         font-weight: 300;
