--- a/resources/css/news/layouts/default.css
+++ b/resources/css/news/layouts/default.css
@@ -1,7 +1,9 @@
 .Layout {
-    display: flex;
+    &_main {
+        display: flex;
+    }
     &_sidebar {
-        flex: 0 0 300px;
+        flex: 0 0 var(--sidebar-width);
     }
     &_center {
         --cut: 3rem;
@@ -34,58 +36,8 @@
             border: 1px solid var(--color-line);
             border-width: 0px 0px 1px 1px;
         }
-        /* // TEST */
-        .Image {
-            float: left;
-            overflow: hidden;
-            position: relative;
-            @keyframes scanline {
-                0% {
-                    transform: translate3d(0, 200000%, 0);
-                }
-            }
-            @keyframes scanlines {
-                0% {
-                    background-position: 0 50%;
-                }
-            }
-            &:before,
-            &:after {
-                display: block;
-                pointer-events: none;
-                content: "";
-                position: absolute;
-            }
-            &:before {
-                width: 100%;
-                height: 2px;
-                z-index: 2147483649;
-                background: rgba(0, 0, 0, 0.3);
-                opacity: 0.75;
-                animation: scanline 6s linear infinite;
-            }
-            &:after {
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
-                z-index: 2147483648;
-                background: linear-gradient(
-                    to bottom,
-                    transparent 50%,
-                    rgba(0, 0, 0, 0.3) 51%
-                );
-                background-size: 100% 4px;
-                animation: scanlines 1s steps(60) infinite;
-            }
-        }
-
-        img {
-            clip-path: polygon(0 calc(var(--cut) / 3 * 2), 0 100%, 100% 100%, 100% 0%, calc(var(--cut) / 3 * 2) 0);
-            max-width: 300px;
-        }
     }
     &_aside {
-        flex: 0 0 300px;
+        flex: 0 0 var(--aside-width);
     }
 }
