--- a/resources/css/news/components/ticker.css
+++ b/resources/css/news/components/ticker.css
@@ -17,23 +17,23 @@
     overflow-x: hidden;
     &:hover &,
     &:focus & {
-        &_track {
+        &-track {
             animation-play-state: paused;
         }
     }
-    &_track {
+    &-track {
         padding-left: 100%;
         box-sizing: content-box;
         display: inline-flex;
         animation: ticker 30s linear infinite;
         will-change: translate3d;
     }
-    &_list {
+    &-list {
         display: flex;
         gap: 1em;
         align-items: center;
     }
-    &_item {
+    &-item {
         white-space: nowrap;
         &::after {
             content: ' ▽';
@@ -41,7 +41,7 @@
             font-size: 1.6em;
         }
     }
-    &_link {
+    &-link {
         font-family: var(--font-heading);
         color: var(--color-heading);
         font-size: 1.6em;
