--- a/resources/css/news/article/lead.css
+++ b/resources/css/news/article/lead.css
@@ -1,15 +1,10 @@
 .ArticleLead {
-    display: grid;
-    grid-template-areas:
-        "thumb space1"
-        "thumb title"
-        "thumb summary"
-        "thumb readmore"
-        "thumb space2";
-    align-items: center;
-    grid-template-rows: 1fr auto auto auto 1fr;
-    gap: 1em;
-    position: relative;
+    padding: 2em;
+    position: sticky;
+    top: 0;
+    display: flex;
+    /* align-items: center; */
+    /* position: relative; */
     &-link {
         position: absolute;
         top: 0;
@@ -17,23 +12,38 @@
         width: 100%;
         height: 100%;
         z-index: 10;
-        &:hover,
-        &:focus {
-            background-color: rgba(255,255,255,0.1)
-        }
+    }
+    &-media {
+        flex: 1 0 50%;
+    }
+    &-main {
+        flex: 1 1 auto;
+        background: var(--color-bg-semi);
+        filter-background: blur(20px);
+        padding: 2em;
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
+        justify-content: center;
     }
     &-thumb {
         grid-area: thumb;
         margin-right: -4em;
         z-index: -1;
+        img {
+            width: 100%;
+        }
     }
     &-title {
         grid-area: title;
+        font-size: 3em;
     }
     &-summary {
         grid-area: summary;
+        font-size: 1.5em;
     }
     &-readmore {
         grid-area: readmore;
+        font-family: var(--font-heading);
     }
 }
