--- a/resources/css/news/components/header.css
+++ b/resources/css/news/components/header.css
@@ -3,6 +3,10 @@
     gap: 1em;
     padding: 0.5em;
     align-items: center;
+    position: fixed;
+    top: 0;
+    background: var(--color-bg);
+    z-index: 30;
 }
 .HeaderLogo {
     @keyframes logo {
