--- a/resources/css/news.css
+++ b/resources/css/news.css
@@ -11,7 +11,7 @@
 @import 'news/layouts/default.css';
 
 @import 'news/components/header.css';
-@import 'news/components/ticker.css';
+@import 'news/components/marquee.css';
 @import 'news/components/top.css';
 @import 'news/components/clock.css';
 @import 'news/components/weather.css';
