--- a/resources/css/news/components/top.css
+++ b/resources/css/news/components/top.css
@@ -2,4 +2,16 @@
     display: flex;
     gap: 4em;
     align-items: center;
+    max-width: 100vw;
+    &-link {
+        flex: 0 0 auto;
+        display: flex;
+        align-items: center;
+        width: 20px;
+        position: absolute;
+        right: 0;
+        height: 100%;
+        padding: 1em;
+        font-size: 2em;
+    }
 }
