--- a/resources/css/news/layouts/layout.css
+++ b/resources/css/news/layouts/layout.css
@@ -8,10 +8,10 @@
     &-body {
         position: sticky;
         top: 0;
-
     }
     &-top {
         /* margin-top: 4rem; */
+        padding: var(--gap) 0;
     }
     &-main {
         display: flex;
