--- a/resources/css/news/article/lead.css
+++ b/resources/css/news/article/lead.css
@@ -1,4 +1,5 @@
 .ArticleLead {
+    /* max-width: 1920px; */
     padding: 2em;
     position: sticky;
     top: 0;
@@ -29,6 +30,7 @@
     }
     &-media {
         flex: 1 0 50%;
+        max-width: 640px;
         position: relative;
         margin-right: -4em;
         &-mini {
