--- a/resources/css/news/article/excerpt.css
+++ b/resources/css/news/article/excerpt.css
@@ -1,15 +1,19 @@
 .ArticleExcerpt {
-    display: grid;
-    grid-template-areas:
-        "thumb space1"
-        "thumb title"
-        "thumb summary"
-        "thumb readmore"
-        "thumb space2";
-    align-items: center;
-    grid-template-rows: 1fr auto auto auto 1fr;
-    gap: 1em;
+    display: flex;
     position: relative;
+    > * {
+        flex: 1 1 100%;
+    }
+    &:hover &,
+    &:focus & {
+        /* background-color: rgba(255,255,255,0.1) */
+        &-main {
+            filter: brightness(160%) contrast(80%);
+        }
+        &-thumb {
+            filter: saturate(200%);
+        }
+    }
     &-link {
         position: absolute;
         top: 0;
@@ -17,21 +21,57 @@
         width: 100%;
         height: 100%;
         z-index: 10;
-        &:hover,
-        &:focus {
-            background-color: rgba(255,255,255,0.1)
-        }
+    }
+    &-main {
+        padding: 1em;
+        background: var(--color-bg-semi);
+        backdrop-filter: blur(5px);
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
+        --cut: 1em;
+        /* @mixin clip-tl-bl; */
+        transition: filter .2s ease-in;
+        z-index: 10;
     }
     &-thumb {
-        grid-area: thumb;
+        margin-left: -2em;
+        transition: filter .2s ease-in;
+    }
+    &-head {
+        flex: 1 1 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1em;
+
     }
     &-title {
-        grid-area: title;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
     }
     &-summary {
-        grid-area: summary;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+    &-foot {
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        gap: 1em;
+    }
+    &-subject {
+        @mixin button;
+        font-size: 0.7em;
+        filter: brightness(50%);
     }
     &-readmore {
-        grid-area: readmore;
+        flex: 0 0 auto;
     }
 }
